--- a/index.html
+++ b/index.html
@@ -51,12 +51,19 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#blogs">Blogs</a>
           </li>
-        </ul>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" download="Divij Sehgal.pdf" href="files/Resume.pdf" target="_blank">DOWNLOAD
+            <i class="fa fa-external-link-alt"></i></a>
+          </li>
+        <ul>
       </div>
     </nav>
 
@@ -70,9 +77,9 @@
           <div class="subheading mb-5"> Chembur · Mumbai, Maharashtra 400074 · +91 8816974354 ·
             <a href="mailto:divij.sehgaal7@gmail.com">divij.sehgaal7@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am self-starter with a hunger for learning new things &amp; enthused by the prospect of solving interesting problems. I am experienced in Software development using Django/Flask, jQuery/AngularJS(1,4+) &amp; Java/SpringMVC/Android.
+          <p class="lead mb-5">I am self-starter with a hunger for learning new things &amp; enjoy solving interesting problems.
           <br>
-          I am always interested by: Distributed Computing, Web Technologies, Computer Vision, Machine Learning.</p>
+          Interests by: Distributed Computing, Computer Vision, Web Technologies, Machine Learning.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/ds04/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
@@ -159,8 +166,16 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Delhi Institute of Technology &amp; Management</h3>
               <div class="subheading mb-3">Bachelor of Technology</div>
-              <div>Computer Science &amp; Engineering</div>
-              <p>CGPA: 7.48</p>
+              <div>Computer Science &amp; Engineering - 7.48 </div>
+              <ul class="fa-ul mb-0">
+                <li>
+                  <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+                  Anchored Cultural event in College.
+                </li>
+                <li>
+                  <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+                  College Notification System - Built a Notification system for College using the OneSignal Platform.
+                </li>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2013 - May 2017</span>
@@ -171,8 +186,13 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Study Hall, Lucknow, UP</h3>
               <div class="subheading mb-3">Secondary School</div>
-              <div>Science(Non-medical) + Informatics Practices</div>
-              <p>83%</p>
+              <div>Science(Non-medical) + Informatics Practices - 83%</div>
+              <ul class="fa-ul mb-0">
+                <li>
+                  <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+                  Volunteer - e-Study Hall - Video Editing, Compilation and Correction
+                </li>
+            </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2011 - 2013</span>
@@ -221,21 +241,61 @@
           <div class="subheading mb-3">Others</div>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-dot-circle"></i>
-            OpenCV, DLib for Computer Vision &amp; Image Processing</li>
+              <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+            OpenCV, DLib, Tensorflow, Sk-learn, Pandas, Numpy</li>
             <li>
-              <i class="fa-li fa fa-dot-circle"></i>
-            Tensorflow, Scikit-learn, Pandas, Numpy for Data Science &amp; Machine Learning related tasks</li>
+              <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+            Relational and Non-relational Databases: MySQL, PostGreSQL, Elasticsearch</li>
             <li>
-              <i class="fa-li fa fa-dot-circle"></i>
-            Databases - MySQL, PostGreSQL, Elasticsearch</li>
+              <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+            Video Streaming Protocols such as RTMP/RTSP etc</li>
             <li>
-              <i class="fa-li fa fa-dot-circle"></i>
+              <i class="fa-li fa fa-chevron-circle-right text-info"></i>
             Test Driven Development &amp; Scrum Methodology</li>
-          <li>
-            <i class="fa-li fa fa-dot-circle"></i>
-          Jenkins for Automated Testing &amp; Build process</li>
+            <li>
+              <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+            Jenkins for Automated Testing &amp; Automated Builds</li>
         </ul>
+        </div>
+      </section>
+
+      <hr class="m-0">
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+        <div class="my-auto">
+          <h2 class="mb-5">Awards, Presentations &amp; Certifications</h2>
+          <ul class="fa-ul mb-0">
+           <li>
+             <i class="fa-li fa fa-certificate text-info"></i>
+             IBM Code Day India - Data Science Badge, earned February 2018 &nbsp;
+             <a href="https://www.youracclaim.com/badges/af002738-ba3c-4872-b36f-9b6b91a5f892" target="_blank"><i class="fa fa-external-link-alt"></i></a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-certificate text-info"></i>
+              Machine Learning by Stanford University on Coursera, completed February 2018 &nbsp;
+              <a href="https://www.coursera.org/account/accomplishments/certificate/SRFZET55PNVJ" target="_blank"><i class="fa fa-external-link-alt"></i></a>
+             </li>
+             <li>
+               <i class="fa-li fa fa-file-powerpoint text-info"></i>
+               Importance of Continuous Integration/Continuous Deployment &nbsp;
+               <a href="https://www.slideshare.net/slideshow/embed_code/key/N5tIGCdHh3oNV6" target="_blank"><i class="fa fa-external-link-alt"></i>
+               </a>
+              </li>
+             <li>
+               <i class="fa-li fa fa-file-powerpoint text-info"></i>
+               Elasticsearch(and its associates)
+               <a href="https://www.slideshare.net/divijsehgal18/elasticsearch-75383070" target="_blank">
+               <i class="fa fa-external-link-alt"></i></a>
+              </li>
+              <li>
+              <i class="fa-li fa fa-trophy text-info"></i>
+              2<sup>nd</sup>
+              Place in School - International Informatics Olympiad, Silverzone - 2012 </li>
+            <li>
+              <i class="fa-li fa fa-trophy text-info"></i>
+              1<sup>st</sup>
+              Place in School - International Informatics Olympiad, Silverzone - 2011</li>
+          </ul>
         </div>
       </section>
 
@@ -251,34 +311,24 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="blogs">
         <div class="my-auto">
-          <h2 class="mb-5">Awards, Presentations &amp; Certifications</h2>
+          <h2 class="mb-5">Blogs/Articles</h2>
           <ul class="fa-ul mb-0">
            <li>
-             <i class="fa-li fa fa-trophy text-warning"></i>
-             <a href="https://www.youracclaim.com/badges/af002738-ba3c-4872-b36f-9b6b91a5f892" target="_blank">IBM Code Day India - Data Science Badge, earned February 2018</a>
+             <i class="fa-li fa fa-pen-nib text-info"></i>
+             A Review of Face Recognition Techniques &nbsp;
+             <a href="https://www.aidetic.in/blog/a-review-of-face-recognition-techniques" target="_blank">
+              <i class="fa fa-external-link-alt"></i>
+             </a>
             </li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              <a href="https://www.coursera.org/account/accomplishments/certificate/SRFZET55PNVJ" target="_blank">Machine Learning course offered by Stanford University through Coursera, completed February 2018</a>
+              <i class="fa-li fa fa-pen-nib text-info"></i>
+              The Video Processing Pipeline &nbsp;
+              <a href="https://www.aidetic.in/blog/the-video-processing-pipeline" target="_blank">
+              <i class="fa fa-external-link-alt"></i>
+            </a>
              </li>
-             <li>
-               <i class="fa-li fa fa-trophy text-warning"></i>
-               <a href="https://www.slideshare.net/slideshow/embed_code/key/N5tIGCdHh3oNV6" target="_blank">Importance of Continuous Integration/Continuous Development &amp; Why Monoliths are overrated</a>
-              </li>
-             <li>
-               <i class="fa-li fa fa-trophy text-warning"></i>
-               <a href="https://www.slideshare.net/divijsehgal18/elasticsearch-75383070" target="_blank">Elasticsearch - Beginner level introduction.</a>
-              </li>
-              <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place in School - International Informatics Olympiad, Silverzone - 2012 </li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place in School - International Informatics Olympiad, Silverzone - 2011</li>
           </ul>
         </div>
       </section>
@@ -289,7 +339,7 @@
 
     <section class="p-3 p-lg-5 d-flex flex-column">
       <footer>
-        This microsite was inspired by <a href="https://startbootstrap.com/template-overviews/resume/" target="_blank">This Theme</a>.
+        Microsite inspired by <a href="https://startbootstrap.com/template-overviews/resume/" target="_blank">This Theme</a>.
       </footer>
     </section>
     <!-- Bootstrap core JavaScript -->
