Fixed minor issue

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
           <p class="lead mb-5">I am self-starter with a hunger for learning new things &amp; enjoy solving interesting problems.
           <br>
-          Interests by: Distributed Computing, Computer Vision, Web Technologies, Machine Learning.</p>
+          Interested by: Distributed Computing, Computer Vision, Web Technologies, Machine Learning.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/ds04/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
