Updated titles, rearranged content, added a projects section to describe projects of significance.

--- a/index.html
+++ b/index.html
@@ -48,16 +48,19 @@
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#blogs">Blogs</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Attributes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#blogs">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" download="Divij Sehgal.pdf" href="files/Resume.pdf" target="_blank">DOWNLOAD
@@ -77,9 +80,9 @@
           <div class="subheading mb-5"> Chembur · Mumbai, Maharashtra 400074 · +91 8816974354 ·
             <a href="mailto:divij.sehgaal7@gmail.com">divij.sehgaal7@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am self-starter with a hunger for learning new things &amp; enjoy solving interesting problems.
+          <p class="lead mb-5">I am self-starter with a hunger for learning new things &amp; enjoy solving interesting and stimulating problems.
           <br>
-          Interested by: Distributed Computing, Computer Vision, Web Technologies, Machine Learning.</p>
+          Interested in: Computer Vision, Web Technologies, Machine Learning, Distributed Systems and Competitive Programming.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/ds04/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
@@ -90,9 +93,6 @@
             <a href="https://www.kaggle.com/sehgaldivij" target="_blank">
               <i class="fab fa-kaggle"></i>
             </a>
-            <!-- <a href="https://www.hackerearth.com/@divij.sehgaal7" target="_blank">
-              <i class="fab fa-hackerrank"></i>
-            </a> -->
             <a href="https://www.facebook.com/Sehgal.Divij1" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
@@ -170,11 +170,11 @@
               <ul class="fa-ul mb-0">
                 <li>
                   <i class="fa-li fa fa-chevron-circle-right text-info"></i>
-                  Anchored Cultural event in College.
+                  Anchored Departmental Cultural event in second semester.
                 </li>
                 <li>
                   <i class="fa-li fa fa-chevron-circle-right text-info"></i>
-                  College Notification System - Built a Notification system for College using the OneSignal Platform.
+                  Active Participant in activites such as dramatics and programming workshops on topics ranging from systems to ethical hacking.
                 </li>
             </div>
             <div class="resume-date text-md-right">
@@ -190,12 +190,69 @@
               <ul class="fa-ul mb-0">
                 <li>
                   <i class="fa-li fa fa-chevron-circle-right text-info"></i>
-                  Volunteer - e-Study Hall - Video Editing, Compilation and Correction
+                  Volunteer - e-Study Hall - Video Editing: Compilation and Correction of educational video content created for Underpriveleged Children studying in primary school. 
                 </li>
             </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2011 - 2013</span>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+      <hr class="m-0">
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">Projects</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Bookie</h3>
+              <div class="subheading mb-3">Restaurant Table Booking Bot</div>
+                <p>
+                  A simple bot to reserve tables at a restaurant persist information to a database.
+                </p>
+                <p>
+                  Interface built using Telegram's APIs. Backend built using the Django framework. Bot deployed to Google App Engine, used Google Memcached for caching and Google Datastore for persistence.
+                </p>
+                <p>
+                  User communication took place through commands such as the interfaces for Customer support in popular apps such as Zomato and Swiggy to take information from a user and respond back using dynamic menus and buttons for user to choose actions from.
+                </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">April 2018</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">College Notification System</h3>
+              <div class="subheading mb-3"></div>
+              <p>
+              Developed a Push-notification based Notification System for College setup using the OneSignal Platform, Android, MySQL, the Django Framework and AngularJS. Deployed the backend on an AWS instance.
+            </p>
+            <p>
+              Coordinated with Faculty members over a period of about 5 months to incorporate ideas and feedback on modelling essential workflows for information management within the College Campus.
+            </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">November 2016 - April 2017</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Line Follower Robot</h3>
+              <div class="subheading mb-3"></div>
+              <p>
+              Built a simple line follower robot using Arduino Atmega-8 microcontroller and servo motors to actuate bot wheel movement.
+            </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">December 2013</span>
             </div>
           </div>
 
@@ -242,7 +299,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-chevron-circle-right text-info"></i>
-            OpenCV, DLib, Tensorflow, Sk-learn, Pandas, Numpy</li>
+            OpenCV, DLib, Tensorflow, Scikit-learn, Pandas, Numpy</li>
             <li>
               <i class="fa-li fa fa-chevron-circle-right text-info"></i>
             Relational and Non-relational Databases: MySQL, PostGreSQL, Elasticsearch</li>
@@ -261,9 +318,20 @@
 
       <hr class="m-0">
 
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+        <div class="my-auto">
+          <h2 class="mb-5">Interests</h2>
+          <p> Apart from programming, I enjoy time outdoors cycling, running &amp; watching the sunset. Indoors, I am often found reading books on my Kindle, watching The Big Bang Theory, playing Billiards. Being the foodie that I am, I equally enjoy Street food, North Indian &amp; South Indian delicacies &amp; usually most other cusines.</p>
+          <p class="mb-0">I spend a  of time just watching random cat videos. On a random day, you might find me fiddling with some new idea, looking to turn it into an interesting side-project. In the little time I have left, I browse the web, reading about programming &amp; interesting experiences on Quora or answering questions on Stack Overflow.</p>
+        </div>
+      </section>
+
+
+      <hr class="m-0">
+
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Awards, Presentations &amp; Certifications</h2>
+          <h2 class="mb-5">Attributes</h2>
           <ul class="fa-ul mb-0">
            <li>
              <i class="fa-li fa fa-certificate text-info"></i>
@@ -301,19 +369,9 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p> Apart from programming, I enjoy outdoor time cycling, running &amp; enjoying a nice sunset. When indoors, I am often found reading books on my Kindle, playing billiards or swimming. Being the foodie that I am, I equally enjoy Street food, North Indian &amp; South Indian delicacies &amp; usually most other cusines.</p>
-          <p class="mb-0">I spend a  of time just watching random cat videos. On a random day, you might find me fiddling with some new idea, looking to turn it into an interesting side-project. In the little time I have left, I browse the web, reading(&amp; sometimes) writing about life, programming &amp; interesting experiences on Quora or answering questions on Stack Overflow.</p>
-        </div>
-      </section>
-
-      <hr class="m-0">
-
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="blogs">
         <div class="my-auto">
-          <h2 class="mb-5">Blogs/Articles</h2>
+          <h2 class="mb-5">Blog/Articles</h2>
           <ul class="fa-ul mb-0">
            <li>
              <i class="fa-li fa fa-pen-nib text-info"></i>
