--- a/index.html
+++ b/index.html
@@ -290,9 +290,12 @@
             </li>
             <li class="list-inline-item">
               <i class="fab fa-angular"></i>
-            </li
+            </li>
             <li class="list-inline-item">
               <i class="fab fa-stripe"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-node-js"></i>
             </li>
           </ul>
           <div class="subheading mb-3">Others</div>
