Minor Update. Quote.

--- a/index.html
+++ b/index.html
@@ -77,12 +77,20 @@
           <h1 class="mb-0">Divij
             <span class="text-primary">Sehgal</span>
           </h1>
-          <div class="subheading mb-5"> Chembur · Mumbai, Maharashtra 400074 · +91 8816974354 ·
+          <div class="subheading mb-2"> Chembur · Mumbai, Maharashtra 400074 · +91 8816974354 ·
             <a href="mailto:divij.sehgaal7@gmail.com">divij.sehgaal7@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am self-starter with a hunger for learning new things &amp; enjoy solving interesting and stimulating problems.
-          <br>
-          Interested in: Computer Vision, Web Technologies, Machine Learning, Distributed Systems and Competitive Programming.</p>
+          <hr>
+          <div class="text-md-right">
+            Bad programmers worry about the code. Good programmers worry about data structures and their relationships.
+          </div>
+          <div class="text-md-right">- Linux Torvalds</div>
+          <hr>
+          <p class="lead mb-4">
+            I am self-starter with a hunger for learning new things &amp; enjoy solving interesting and stimulating problems.
+            <br>
+            Interested in: Computer Vision, Web Technologies, Machine Learning, Distributed Systems and Competitive Programming.
+          </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/ds04/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
