--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <a class="nav-link js-scroll-trigger" href="#blogs">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" download="Divij Sehgal.pdf" href="files/Resume.pdf" target="_blank">DOWNLOAD
+            <a class="nav-link js-scroll-trigger" download="Divij Sehgal.pdf" href="files/Resume.pdf" target="_blank">Download
             <i class="fa fa-external-link-alt"></i></a>
           </li>
         <ul>
@@ -93,10 +93,15 @@
           <div class="text-md-right">
             Bad programmers worry about the code. Good programmers worry about data structures and their relationships.
           </div>
-          <div class="text-md-right">- Linux Torvalds</div>
+          <div class="text-md-right">- Linus Torvalds</div>
           <hr>
           <p class="lead mb-4">
-            I am self-starter with a hunger for learning new things &amp; enjoy solving interesting and stimulating problems.
+            I am Programmer with a hunger for learning new technologies &amp; enjoy solving interesting and stimulating problems. I look for hurdles that are way beyond my current reach to challenge myself as an individual as well as on a Professional level.
+
+            <span class="text-md-right">
+              Have a challenging assignment?
+              <a href='mailto: divij.sehgaal7@gmail.com'>Hire Me</a>
+            </span>
             <br>
             Interested in: Computer Vision, Web Technologies, Machine Learning, Distributed Systems and Competitive Programming.
           </p>
@@ -130,10 +135,12 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Co-founder</h3>
               <div class="subheading mb-3">Aidetic Software</div>
-              <p>We are a product company that builds smarter tools &amp; solutions using Artificial Intelligence, Computer Vision &amp; some Creativity.</p>
+              <p> 
+                We are a Niche Software Development Organization that builds smart tools &amp; solutions using Artificial Intelligence &amp; some Creativity. We currently operate in areas of Autonomous Systems, Computer Vision, Information Retreival and Natural Language Processing to build Intelligent machines.
+              </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2017 - Present</span>
+              <span class="text-primary">July 2018 - Present</span>
             </div>
           </div>
 
@@ -141,7 +148,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Full Stack Developer</h3>
               <div class="subheading mb-3">Flytbase Inc, Pune</div>
-              <p>Worked on microservices based software development &amp; integration of Chargebee Subscription billing platform via Stripe Gateway. Developed a platform for drone based inspection of Telecom Towers in the United States. Developed a real-time video streaming application to stream video from on-board drone cameras in real-time to the user.</p>
+              <p>Worked on microservices based software development, Integration of Chargebee Subscription billing platform via Stripe Gateway. Developed a platform for drone based inspection of Telecom Towers in the United States. Developed a real-time video streaming application to stream video from on-board drone cameras in real-time to the user.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2017 - May 2018</span>
@@ -319,10 +326,13 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+            In addition to the above, I am fairly proficient in C++ and Bash</li>
+            <li>
+              <i class="fa-li fa fa-chevron-circle-right text-info"></i>
             OpenCV, DLib, Tensorflow, Scikit-learn, Pandas, Numpy</li>
             <li>
               <i class="fa-li fa fa-chevron-circle-right text-info"></i>
-            Relational and Non-relational Databases: MySQL, PostGreSQL, Elasticsearch</li>
+            Databases and Caching: MySQL, PostGreSQL, Elasticsearch, Celery</li>
             <li>
               <i class="fa-li fa fa-chevron-circle-right text-info"></i>
             Video Streaming Protocols such as RTMP/RTSP etc</li>
@@ -331,7 +341,16 @@
             Test Driven Development &amp; Scrum Methodology</li>
             <li>
               <i class="fa-li fa fa-chevron-circle-right text-info"></i>
-            Jenkins for Automated Testing &amp; Automated Builds</li>
+            Jenkins for Automated Testing &amp; Software Builds</li>
+            <li>
+              <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+            Web Crawling, using modern tools such as Selenium and BeautifulSoup.</li>
+            <li>
+              <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+            Have good exposure to System Architecture and Scaling Software Systems.</li>
+            <li>
+              <i class="fa-li fa fa-chevron-circle-right text-info"></i>
+            Building Conversational to Semi-conversational Bots.</li>
         </ul>
         </div>
       </section>
@@ -391,7 +410,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="blogs">
         <div class="my-auto">
-          <h2 class="mb-5">Blog/Articles</h2>
+          <h2 class="mb-5">Blogs/Articles</h2>
           <ul class="fa-ul mb-0">
            <li>
              <i class="fa-li fa fa-pen-nib text-info"></i>
@@ -407,6 +426,14 @@
               <i class="fa fa-external-link-alt"></i>
             </a>
              </li>
+             <li>
+               <i class="fa-li fa fa-pen-nib text-info"></i>
+                Elasticsearch Search Engine | GeeksForGeeks &nbsp;
+               <a href="https://www.geeksforgeeks.org/elasticsearch-search-engine-an-introduction/" target="_blank">
+                 <i class="fa fa-external-link-alt"></i>
+               </a>
+             </li>
+             
           </ul>
         </div>
       </section>
