--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
           <div class="text-md-right">- Linus Torvalds</div>
           <hr>
           <p class="lead mb-4">
-            Divij is a Machine Learning Engineer with interests in Machine Learning, Computer Vision and Image Processing, among other things. He uses Machine Learning and Deep Learning Technologies everyday to create intelligent neural network models and applications using these technologies.
+            Divij has interests in Machine Learning, Computer Vision and Image Processing, among other things. He is currently into ML and DL Technologies to create intelligent neural network models and applications using these technologies.
             He is well versed with all aspects of Software Development across various different technologies including Cloud Computing, Deep Learning on Edge Devices such as Nvidia's Jetson Platform and Mobile Application Development and loves consuming Research.
             
             <!-- I am Programmer with a hunger for learning new technologies &amp; enjoy solving interesting and stimulating problems. I look for hurdles that are way beyond my current reach to challenge myself as an individual as well as on a Professional level.-->
 
             <span class="text-md-right">
-              Have a challenging assignment?
+              Have a challenging assignment?  
               <a href='mailto: divij.sehgaal7@gmail.com'>Hire Me</a>
             </span>
             <br>
