--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
           <div class="text-md-right">- Linus Torvalds</div>
           <hr>
           <p class="lead mb-4">
-            Divij has interests in Machine Learning, Computer Vision and Image Processing, among other things. He is currently into ML and DL Technologies to create intelligent neural network models and applications using these technologies.
+
+            Divij has interests in Machine Learning, Computer Vision and Image Processing, among other things. He is currently into ML and DL Technologies to create intelligent Computer Vision Applications.
+
             He is well versed with all aspects of Software Development across various different technologies including Cloud Computing, Deep Learning on Edge Devices such as Nvidia's Jetson Platform and Mobile Application Development and loves consuming Research.
             
             <!-- I am Programmer with a hunger for learning new technologies &amp; enjoy solving interesting and stimulating problems. I look for hurdles that are way beyond my current reach to challenge myself as an individual as well as on a Professional level.-->
